--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,66 @@
+# Node.js / General
 node_modules/
 dist/
 build/
+tmp/
+temp/
+coverage/
+*.log
+logs/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
+report.*.json
+.cache/
+.parcel-cache
+.DS_Store
+Thumbs.db
+.vscode/
+.idea/
+
+# PostgreSQL / dotenv
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-.DS_Store
-Thumbs.db
-.vscode/
-.idea/
-npm-debug.log*
-yarn-debug.log*
-coverage/
+
+# Frontend builds
+.next
+out
+.nuxt
+.vuepress/dist
+.temp
 .cache/
+.docusaurus
+.serverless/
+.fusebox/
+.dynamodb/
+.tern-port
+.vscode-test
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
+
+# Optional tooling
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+.eslintcache
+.stylelintcache
+*.tsbuildinfo
+bower_components
+jspm_packages
+web_modules
+lib-cov
+.lock-wscript
+*.pid
+*.seed
+*.pid.lock
+*.tgz
+.node_repl_history
