--- a/package.json
+++ b/package.json
@@ -23,14 +23,28 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": ["react-app", "react-app/jest"]
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
-    "production": [">0.2%", "not dead", "not op_mini all"],
-    "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
-    "nodemon": "3.1.9"
+    "autoprefixer": "^10.4.22",
+    "nodemon": "3.1.9",
+    "postcss": "^8.5.6",
+    "tailwindcss": "3.4"
   },
   "engines": {
     "node": "18.x"
